--- a/css/contacto.css
+++ b/css/contacto.css
@@ -41,3 +41,20 @@
 
 /* Si hay más palabras, se pueden repetir los estilos en bucle */
 
+.fons01 { background-color: orange; color: white; text-align: center; }
+.fons02 { background-color: deeppink; color: white; text-align: center; }
+.fons03 { background-color: lightblue; color: black; text-align: center; }
+.fons04 { background-color: lightgreen; color: black; text-align: center; }
+.fons05 { background-color: purple; color: white; text-align: center; }
+
+table {
+    margin: 20px auto;
+    border-collapse: collapse;
+    font-family: Arial, sans-serif;
+}
+td {
+    width: 100px;
+    height: 50px;
+    text-align: center;
+    font-weight: bold;
+}
