--- a/css/estils.css
+++ b/css/estils.css
@@ -164,3 +164,10 @@ textarea:required:focus {
     margin-left: auto;
     margin-right: auto;
 }
+.fecha-actual {
+    font-size: 16px;
+    font-weight: bold;
+    color: #006400; /* verde oscuro */
+    text-align: center;
+    margin: 10px 0;
+}
